# imgui_inspector

./: Cargo.toml
imgui_inspector_derive/: Cargo.toml
imgui_inspector_derive/src/: lib.rs
src/: inspect_color.rs  inspect_custom.rs  inspect_numeric.rs  lib.rs
