[package]
name = "imgui_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.10.0"
syn = "1.0.109"
imgui_inspector_derive = { path = "imgui_inspector_derive" }
cg = { package = "cgmath", version = "0.18.0" }